Removido segredo detectado pelo GitHub